--- a/packages/graphiql-react/package.json
+++ b/packages/graphiql-react/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@graphiql/toolkit": "^0.6.0",
+    "@reach/combobox": "^0.17.0",
     "codemirror": "^5.65.3",
     "codemirror-graphql": "^1.3.0",
     "copy-to-clipboard": "^3.2.0",
