--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "VS Code Extension: Run",
+      "name": "VS Code LSP Extension: Run",
       "type": "extensionHost",
       "request": "launch",
       "runtimeExecutable": "${execPath}",
@@ -21,7 +21,7 @@
     },
     {
       "type": "node",
-      "name": "jest watch",
+      "name": "jest watch vscode",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/jest/bin/jest",
       "args": [
@@ -35,6 +35,20 @@
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
+    },
+    {
+      "name": "VS Code Exec Extension: Run",
+      "type": "extensionHost",
+      "request": "launch",
+      "runtimeExecutable": "${execPath}",
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode-graphql-execution"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/packages/vscode-graphql-execution/out/extension.js"
+      ],
+      "sourceMaps": true,
+      "preLaunchTask": "watch-vscode-exec"
     }
   ]
 }
