--- a/packages/vscode-graphql-execution/package.json
+++ b/packages/vscode-graphql-execution/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vscode-graphql-executionution",
+  "name": "vscode-graphql-execution",
   "version": "0.1.0",
   "displayName": "GraphQL: Inline Operation Execution",
   "description": "Execute graphql operations from your code (revived!)",
@@ -96,24 +96,26 @@
     "@types/dotenv": "8.2.0",
     "@types/mocha": "5.2.7",
     "@types/node": "16.11.26",
-    "@types/node-fetch": "3.0.3",
     "@types/vscode": "1.62.0",
-    "@types/ws": "8.2.2",
     "esbuild": "0.15.1",
     "ovsx": "0.3.0",
     "vsce": "2.6.7"
   },
   "dependencies": {
     "@urql/core": "2.6.1",
+    "@whatwg-node/fetch": "0.4.0",
     "babel-polyfill": "6.26.0",
     "capitalize": "2.0.4",
     "dotenv": "10.0.0",
     "escape-html": "1.0.3",
-    "graphql-config": "4.3.4",
+    "graphql": "^16.4.0",
+    "graphql-config": "4.3.5",
+    "graphql-sse": "1.3.0",
     "graphql-tag": "2.12.6",
     "graphql-ws": "5.10.0",
-    "@whatwg-node/fetch": "0.2.8",
-    "ws": "8.8.1",
-    "graphql": "^16.4.0"
+    "sync-fetch": "^0.4.1",
+    "valid-url": "^1.0.9",
+    "wonka": "^6.0.0",
+    "ws": "8.8.1"
   }
 }
