--- a/packages/vscode-graphql-execution/package.json
+++ b/packages/vscode-graphql-execution/package.json
@@ -52,7 +52,7 @@
     "configuration": {
       "title": "VSCode GraphQL: Inline Operation Execution",
       "properties": {
-        "vscode-graphql-execution.debug": {
+        "vscode-graphql.execution.debug": {
           "type": [
             "boolean",
             "null"
@@ -60,14 +60,14 @@
           "default": false,
           "description": "Enable debug logs"
         },
-        "vscode-graphql-execution.showExecCodelens": {
+        "vscode-graphql.execution.showCodelens": {
           "type": [
             "boolean"
           ],
           "description": "Show codelens to execute operations inline",
           "default": true
         },
-        "vscode-graphql-execution.rejectUnauthorized": {
+        "vscode-graphql.execution.rejectUnauthorized": {
           "type": [
             "boolean"
           ],
@@ -104,6 +104,7 @@
   "dependencies": {
     "@urql/core": "2.6.1",
     "@whatwg-node/fetch": "0.4.0",
+    "cross-undici-fetch": "0.4.14",
     "babel-polyfill": "6.26.0",
     "capitalize": "2.0.4",
     "dotenv": "10.0.0",
@@ -113,6 +114,7 @@
     "graphql-sse": "1.3.0",
     "graphql-tag": "2.12.6",
     "graphql-ws": "5.10.0",
+    "nullthrows": "^1.1.1",
     "sync-fetch": "^0.4.1",
     "valid-url": "^1.0.9",
     "wonka": "^6.0.0",
