--- a/packages/vscode-graphql/.vscodeignore
+++ b/packages/vscode-graphql/.vscodeignore
@@ -3,9 +3,12 @@
 out/test/**
 src/**
 .gitignore
-node_modules
+node_modules/**
+!node_modules/ts-node/**
+!node_modules/.bin/ts-node/**
 tsconfig.json
 vsc-extension-quickstart.md
 tslint.json
 .github
 renovate.json
+tsconfig.tsbuildinfo
