--- a/packages/vscode-graphql/.vscodeignore
+++ b/packages/vscode-graphql/.vscodeignore
@@ -3,10 +3,15 @@
 out/test/**
 src/**
 .gitignore
-node_modules/**
-!node_modules/ts-node/**
-!node_modules/.bin/ts-node/**
-tsconfig.json
+
+
+**/node_modules/**
+
+!**/node_modules/ts-node/**
+!**/node_modules/@swc/**
+
+**/tsconfig.json
+
 vsc-extension-quickstart.md
 tslint.json
 .github
